--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,23 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root {
+  --card-width: 20rem;
+  --card-height: 40rem;
+  --black: #454545;
+  --orange: #FF6000;
+  --light-orange: #FFA559;
+  --cream: #FFE6C7;
+  --white: white;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  color: var(--black);
+  background-color: var(--cream);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -14,56 +25,60 @@
   -webkit-text-size-adjust: 100%;
 }
 
+nav {
+  position: fixed;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 5rem;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+nav .navigation_list {
+  display: flex;
+}
+nav .navigation_list a {
+  width: 5rem;
+  height: 4rem;
+  display: grid;
+  place-items: center;
+}
+nav .logo {
+  color: white;
+}
+
+.food_thumb_card {
+  width: var(--card-width);
+  height: var(--card-height);
+  background: var(--orange);
+  overflow: hidden;
+}
+.food_thumb_card img {
+  width: 100%;
+  height: calc(var(--card-height) * 0.5);
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.food_thumb_card .info_div {
+  padding: 1rem;
+}
+.food_thumb_card .info_div h2 {
+  color: var(--black);
+}
+.food_thumb_card .info_div ul {
+  color: var(--white);
+  list-style: none;
+}
+
+main {
+  padding-top: 5rem;
+}
+
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  text-decoration: none;
+  color: currentColor;
 }
 a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+  filter: brightness(1.5);
+}/*# sourceMappingURL=index.css.map */
