--- a/src/index.scss
+++ b/src/index.scss
@@ -14,8 +14,6 @@
     --white: white;
 
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 400;
 
     color-scheme: light dark;
     color: var(--black);
@@ -30,15 +28,18 @@
 
 nav {
     position: fixed;
-    left: 0; right: 0;
+    left: 0;
+    right: 0;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-inline: 5rem;
     background-color: rgba(0, 0, 0, 0.2);
+
     .navigation_list {
         display: flex;
+
         a {
             width: 5rem;
             height: 4rem;
@@ -46,6 +47,7 @@ nav {
             place-items: center;
         }
     }
+
     .logo {
         color: white;
     }
@@ -53,34 +55,111 @@ nav {
 
 .food_thumb_card {
     width: var(--card-width);
-    height: var(--card-height);
-    background: var(--orange);
-    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+
     img {
         width: 100%;
         height: calc(var(--card-height) * 0.5);
         object-fit: cover;
     }
+
     .info_div {
-        padding: 1rem;
-        h2 {
-            color: var(--black)
+        background: var(--orange);
+        h3 {
+            color: var(--black);
+            text-align: center;
         }
-        ul {
-            color: var(--white);
-            list-style: none;
+        .showup_grid {
+            ul {
+                color: var(--white);
+                list-style: none;
+                height: 5rem;
+                overflow: hidden;
+                position: relative;
+                transition: height 0.3s;
+                background: var(--orange);
+                padding: 0.5rem;
+                li {
+                    display: flex;
+                    justify-content: space-between;
+                }
+    
+                &::after {
+                    content: '';
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    right: 0;
+                    height: 2rem;
+                    background: linear-gradient(transparent, var(--orange));
+                    transition: filter 0.5s
+                }
+            }
         }
+
     }
 }
 
 main {
     padding-top: 5rem;
+    min-height: 91vh;
 }
 
 a {
     text-decoration: none;
     color: currentColor;
+
     &:hover {
         filter: brightness(1.5)
     }
+}
+
+.grid_container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 20rem);
+}
+
+.food_list_container {
+    gap: 2rem;
+    flex-wrap: wrap;
+    align-items: start;
+    justify-content: space-evenly;
+}
+
+.showup_grid {
+    display: grid;
+    overflow: hidden;
+    grid-template-rows: 1fr;
+}
+
+.open {
+    height: 100% !important;
+    &:after {
+        filter: opacity(0);
+    }
+}
+
+.btn {
+    padding: 0.25rem;
+    cursor: pointer;
+}
+
+.orange-transparent-btn {
+    width: 100%;
+    background-color: transparent;
+    color: var(--black);
+    border: 1px solid var(--black);
+    transition: color 0.4s, background-color 0.2s, border 0.2s;
+    &:hover {
+        color: var(--white);
+        border: 1px solid var(--white);
+        background-color: var(--black);
+    }
+}
+
+footer {
+    background-color: var(--black);
+    color: var(--cream);
 }
