--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: "Trajan Pro";
+  src: url("../public/fonts/TrajanPro-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Trajan Pro";
+  font-weight: bold;
+  src: url("../public/fonts/TrajanPro-Bold.otf") format("opentype");
+}
 * {
   margin: 0;
   padding: 0;
@@ -6,13 +15,13 @@
 
 :root {
   --card-width: 20rem;
-  --card-height: 40rem;
+  --card-height: 30rem;
   --black: #454545;
   --orange: #FF6000;
   --light-orange: #FFA559;
   --cream: #FFE6C7;
   --white: white;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Trajan Pro", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   color-scheme: light dark;
   color: var(--black);
   background-color: var(--cream);
@@ -24,9 +33,6 @@
 }
 
 nav {
-  position: fixed;
-  left: 0;
-  right: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -35,64 +41,96 @@ nav {
 }
 nav .navigation_list {
   display: flex;
+  align-items: center;
 }
-nav .navigation_list a {
-  width: 5rem;
+nav .navigation_list > a {
+  width: 8rem;
   height: 4rem;
   display: grid;
   place-items: center;
 }
 nav .logo {
   color: white;
+  font-size: 2.5rem;
+}
+
+.custom_input {
+  display: flex;
+  border: 1px solid var(--black);
+  border-radius: 1rem;
+  overflow: hidden;
+}
+.custom_input a {
+  display: block;
+  padding: 0.4rem 0.5rem;
+  border-left: 1px solid var(--black);
+  transition: background-color 0.3s, color 0.3s;
+}
+.custom_input a:hover {
+  background-color: var(--black);
+  color: var(--white);
+}
+.custom_input input {
+  background-color: transparent;
+  border: none;
+  padding: 0.5rem;
+  outline: none;
 }
 
 .food_thumb_card {
   width: var(--card-width);
+  height: var(--card-height);
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
+  background: var(--orange);
+  transition: height 0.2s;
 }
-.food_thumb_card img {
+.food_thumb_card h3 {
+  text-align: center;
+  padding-inline: 1rem;
+  border-bottom: 1px solid var(--black);
   width: 100%;
-  height: calc(var(--card-height) * 0.5);
-  -o-object-fit: cover;
-     object-fit: cover;
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .food_thumb_card .info_div {
-  background: var(--orange);
-}
-.food_thumb_card .info_div h3 {
-  color: var(--black);
-  text-align: center;
-}
-.food_thumb_card .info_div .showup_grid ul {
-  color: var(--white);
-  list-style: none;
-  height: 5rem;
-  overflow: hidden;
   position: relative;
-  transition: height 0.3s;
-  background: var(--orange);
-  padding: 0.5rem;
 }
-.food_thumb_card .info_div .showup_grid ul li {
+.food_thumb_card .info_div ul {
+  position: relative;
+  padding-inline: 1rem;
+  height: 7rem;
+  list-style: none;
+  padding-bottom: 0.5rem;
+  overflow: hidden;
+  background: var(--orange);
+}
+.food_thumb_card .info_div ul:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 2rem;
+  background-image: linear-gradient(transparent, var(--orange));
+}
+.food_thumb_card .info_div ul li {
   display: flex;
   justify-content: space-between;
 }
-.food_thumb_card .info_div .showup_grid ul::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 2rem;
-  background: linear-gradient(transparent, var(--orange));
-  transition: filter 0.5s;
+.food_thumb_card .showup_grid {
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
-main {
-  padding-top: 5rem;
-  min-height: 91vh;
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
 }
 
 a {
@@ -104,6 +142,7 @@ a:hover {
 }
 
 .grid_container {
+  padding-block: 3rem;
   display: grid;
   grid-template-columns: repeat(auto-fill, 20rem);
 }
@@ -133,14 +172,14 @@ a:hover {
   cursor: pointer;
 }
 
-.orange-transparent-btn {
+.orange-black-btn {
   width: 100%;
-  background-color: transparent;
+  background-color: var(--orange);
   color: var(--black);
   border: 1px solid var(--black);
   transition: color 0.4s, background-color 0.2s, border 0.2s;
 }
-.orange-transparent-btn:hover {
+.orange-black-btn:hover {
   color: var(--white);
   border: 1px solid var(--white);
   background-color: var(--black);
@@ -149,4 +188,5 @@ a:hover {
 footer {
   background-color: var(--black);
   color: var(--cream);
+  padding: 3rem;
 }/*# sourceMappingURL=index.css.map */
