--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,12 @@
-@font-face {
-  font-family: "Trajan Pro";
-  src: url("../public/fonts/TrajanPro-Regular.ttf") format("truetype");
-}
-@font-face {
-  font-family: "Trajan Pro";
-  font-weight: bold;
-  src: url("../public/fonts/TrajanPro-Bold.otf") format("opentype");
-}
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 :root {
-  --card-width: 20rem;
-  --card-height: 30rem;
-  --black: #454545;
-  --orange: #FF6000;
-  --light-orange: #FFA559;
-  --cream: #FFE6C7;
-  --white: white;
-  font-family: "Trajan Pro", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
   color-scheme: light dark;
-  color: var(--black);
-  background-color: var(--cream);
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -32,161 +14,56 @@
   -webkit-text-size-adjust: 100%;
 }
 
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-inline: 5rem;
-  background-color: rgba(0, 0, 0, 0.2);
-}
-nav .navigation_list {
-  display: flex;
-  align-items: center;
-}
-nav .navigation_list > a {
-  width: 8rem;
-  height: 4rem;
-  display: grid;
-  place-items: center;
-}
-nav .logo {
-  color: white;
-  font-size: 2.5rem;
-}
-
-.custom_input {
-  display: flex;
-  border: 1px solid var(--black);
-  border-radius: 1rem;
-  overflow: hidden;
-}
-.custom_input a {
-  display: block;
-  padding: 0.4rem 0.5rem;
-  border-left: 1px solid var(--black);
-  transition: background-color 0.3s, color 0.3s;
-}
-.custom_input a:hover {
-  background-color: var(--black);
-  color: var(--white);
-}
-.custom_input input {
-  background-color: transparent;
-  border: none;
-  padding: 0.5rem;
-  outline: none;
-}
-
-.food_thumb_card {
-  width: var(--card-width);
-  height: var(--card-height);
-  display: flex;
-  flex-direction: column;
-  gap: 0.25rem;
-  background: var(--orange);
-  transition: height 0.2s;
-}
-.food_thumb_card h3 {
-  text-align: center;
-  padding-inline: 1rem;
-  border-bottom: 1px solid var(--black);
-  width: 100%;
-  font-weight: bold;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.food_thumb_card .info_div {
-  position: relative;
-}
-.food_thumb_card .info_div ul {
-  position: relative;
-  padding-inline: 1rem;
-  height: 7rem;
-  list-style: none;
-  padding-bottom: 0.5rem;
-  overflow: hidden;
-  background: var(--orange);
-}
-.food_thumb_card .info_div ul:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 2rem;
-  background-image: linear-gradient(transparent, var(--orange));
-}
-.food_thumb_card .info_div ul li {
-  display: flex;
-  justify-content: space-between;
-}
-.food_thumb_card .showup_grid {
-  display: grid;
-  grid-template-columns: 1fr;
-}
-
-#root {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100vh;
-}
-
 a {
-  text-decoration: none;
-  color: currentColor;
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
 }
 a:hover {
-  filter: brightness(1.5);
+  color: #535bf2;
 }
 
-.grid_container {
-  padding-block: 3rem;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 20rem);
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
 }
 
-.food_list_container {
-  gap: 2rem;
-  flex-wrap: wrap;
-  align-items: start;
-  justify-content: space-evenly;
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
 }
 
-.showup_grid {
-  display: grid;
-  overflow: hidden;
-  grid-template-rows: 1fr;
-}
-
-.open {
-  height: 100% !important;
-}
-.open:after {
-  filter: opacity(0);
-}
-
-.btn {
-  padding: 0.25rem;
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
   cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
 
-.orange-black-btn {
-  width: 100%;
-  background-color: var(--orange);
-  color: var(--black);
-  border: 1px solid var(--black);
-  transition: color 0.4s, background-color 0.2s, border 0.2s;
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
 }
-.orange-black-btn:hover {
-  color: var(--white);
-  border: 1px solid var(--white);
-  background-color: var(--black);
-}
-
-footer {
-  background-color: var(--black);
-  color: var(--cream);
-  padding: 3rem;
-}/*# sourceMappingURL=index.css.map */
