--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap");
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
+  --orange: #E86A33;
+  --dark-green: #263A29;
+  --light-green: #41644A;
+  --cream: #F2E3DB;
+  --white: white;
+  --red: #FF2400;
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  color: var(--dark-green);
+  background-color: var(--cream);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -14,56 +16,105 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+html,
+input,
+button,
+textarea,
+select {
+  font-family: "Libre Baskerville", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
 }
 
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+a {
+  color: currentColor;
+  text-decoration: none;
+}
+
+nav {
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 3rem;
+}
+nav a {
+  display: inline-block;
+  padding: 1rem;
+  transition: letter-spacing 0.5s, color 0.5s, background-color 0.5s;
+}
+nav a:hover {
+  color: var(--light-green);
+  letter-spacing: 0.1rem;
+  background-color: var(--orange);
+}
+
+#root {
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+#home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.preview_card {
+  background-color: var(--orange);
+  width: 20rem;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+.preview_card img {
+  max-width: 100%;
+  height: 20rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.preview_card .food_info {
+  padding: 1rem;
+}
+.preview_card .food_info ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+.preview_card .food_info ul li {
+  display: flex;
+  justify-content: space-between;
+}
+.preview_card .food_buttons {
+  display: flex;
+  justify-content: stretch;
+  align-items: stretch;
+}
+.preview_card .food_buttons button {
+  flex: 1 1 auto;
+  font-size: 2rem;
+  border: none;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: color 0.2s, background-color 0.2s;
 }
-button:hover {
-  border-color: #646cff;
+.preview_card .food_buttons button.love_btn:hover {
+  color: var(--red);
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.preview_card .food_buttons button.delete_btn:hover {
+  background-color: var(--red);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.category_selector {
+  position: absolute;
+  top: 5rem;
+  left: 5rem;
+  display: grid;
+  grid-template-columns: 0.5fr 1fr;
+  gap: 1rem;
 }
+.category_selector select {
+  padding: 0.25rem 0.5rem;
+}/*# sourceMappingURL=index.css.map */
