--- a/src/index.scss
+++ b/src/index.scss
@@ -50,12 +50,26 @@ nav {
     display: inline-block;
     padding: 1rem;
     transition: letter-spacing 0.5s, color 0.5s, background-color 0.5s;
+    position: relative;
   }
 
   a:hover {
     color: var(--light-green);
     letter-spacing: 0.1rem;
     background-color: var(--orange);
+  }
+
+  #favourite_counter {
+    display: grid;
+    place-items: center;
+    width: 1.25rem;
+    height: 1.25rem;
+    position: absolute;
+    font-size: 0.75rem;
+    background-color: var(--orange);
+    border-radius: 50%;
+    top: 0.25rem;
+    right: 0;
   }
 }
 
@@ -67,27 +81,92 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 90vh;
+}
+
+.card_list_container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  justify-content: space-evenly;
 }
 
 .preview_card {
   background-color: var(--orange);
   width: 20rem;
+  height: max-content;
   border-radius: 1rem;
-  overflow: hidden;
+  position: relative;
+  .open_full_link {
+    transition: filter 0.5s;
+    position:relative;
+    display: block;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    &:after {
+      content: '';
+      position: absolute;
+      left: 0; right: 0;
+      top: 0;
+      height: 100%;
+      background: url(./assets/read-svgrepo-com.svg) no-repeat center;
+      background-size: 50%;
+      filter: opacity(0);
+      transition: filter 0.5s;
+    }
+    &:hover {
+      filter: brightness(0.8);
+      &:after {
+        filter: opacity(1)
+      }
+      }
+    img {
+      max-width: 100%;
+      height: 20rem;
+      object-fit: cover;
+    }
+  }
 
-  img {
-    max-width: 100%;
-    height: 20rem;
-    object-fit: cover;
+  h3 {
+    text-align: center;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    border-bottom: 1px solid var(--dark-green);
   }
 
   .food_info {
-    padding: 1rem;
+    padding-inline: 1rem;
+
+    .grid_collapse {
+      display: grid;
+      grid-template-rows: 0fr;
+      transition: grid-template-rows 0.5s;
+      &.open {
+        grid-template-rows: 1fr;
+        ul:after {
+          filter: opacity(0);
+        }
+      }
+    }
 
     ul {
       list-style: none;
       display: flex;
       flex-direction: column;
+      overflow: hidden;
+      position: relative;
+      &:after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 2rem;
+        background: linear-gradient(transparent, var(--orange));
+        transition: filter 0.5s
+      }
 
       li {
         display: flex;
@@ -97,16 +176,20 @@ nav {
   }
 
   .food_buttons {
-    display: flex;
-    justify-content: stretch;
-    align-items: stretch;
+    display: grid;
+    grid-template-columns: 0.25fr 1fr 0.25fr;
 
     button {
-      flex: 1 1 auto;
-      font-size: 2rem;
+      font-size: 1rem;
       border: none;
       cursor: pointer;
       transition: color 0.2s, background-color 0.2s;
+
+      &.full_list {
+        &:hover {
+          background-color: grey;
+        }
+      }
 
       &.love_btn:hover {
         color: var(--red);
@@ -123,12 +206,47 @@ nav {
   position: absolute;
   top: 5rem;
   left: 5rem;
-  
+
   display: grid;
   grid-template-columns: 0.5fr 1fr;
   gap: 1rem;
+
   select {
     padding: 0.25rem 0.5rem;
   }
 
+}
+
+#product_page {
+  .food_name {
+    text-align: center;
+    padding-block: 1rem;
+    font-size: 3rem;
+    background-color: var(--orange);
+  }
+  .top_section {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 3rem;
+    padding-inline: 5rem;
+    img {
+      height: 30rem;
+      width: 30rem;
+      place-self: center;
+      object-fit: cover;
+    }
+    ul {
+      li {
+        display: flex;
+        justify-content: space-between;
+      }
+      li:nth-of-type(odd) {
+        border-bottom: 1px solid var(--dark-green)
+      }
+      li:nth-of-type(even) {
+        border-bottom: 1px solid var(--orange)
+      }
+    }
+  }
 }
