--- a/src/index.scss
+++ b/src/index.scss
@@ -9,8 +9,8 @@
   --red: #FF2400;
 
   color-scheme: light dark;
-  color: var(--dark-green);
-  background-color: var(--cream);
+  color: var(--white);
+  background-color: var(--white);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -45,6 +45,8 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding-inline: 3rem;
+  background-color: var(--light-green);
+  color: var(--white);
 
   a {
     display: inline-block;
@@ -54,7 +56,6 @@ nav {
   }
 
   a:hover {
-    color: var(--light-green);
     letter-spacing: 0.1rem;
     background-color: var(--orange);
   }
@@ -78,17 +79,22 @@ nav {
 }
 
 #home {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 90vh;
+  .hero_text {
+    margin-block: 2rem;
+    font-size: 5rem;
+    text-align: center;
+    padding-block: 2rem;
+    background-color: var(--dark-green);
+  }
 }
 
 .card_list_container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
+  grid-template-columns: repeat(auto-fill, 23rem);
+
+  gap: 2rem;
   justify-content: space-evenly;
+  justify-items: center;
 }
 
 .preview_card {
@@ -220,6 +226,7 @@ nav {
 #product_page {
   .food_name {
     text-align: center;
+    margin-block: 1rem;
     padding-block: 1rem;
     font-size: 3rem;
     background-color: var(--orange);
@@ -230,6 +237,8 @@ nav {
     align-items: center;
     margin-top: 3rem;
     padding-inline: 5rem;
+    color: var(--dark-green);
+    margin-block: 2rem;
     img {
       height: 30rem;
       width: 30rem;
@@ -248,5 +257,9 @@ nav {
         border-bottom: 1px solid var(--orange)
       }
     }
+  }
+  .food_instruction {
+    background-color: var(--dark-green);
+    margin-inline: 3rem;
   }
 }
