--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@
 
   color-scheme: light dark;
   color: var(--white);
-  background-color: var(--white);
+  background-color: var(--cream);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -46,18 +46,20 @@ nav {
   align-items: center;
   padding-inline: 3rem;
   background-color: var(--light-green);
-  color: var(--white);
+  color: var(--cream);
 
   a {
     display: inline-block;
     padding: 1rem;
     transition: letter-spacing 0.5s, color 0.5s, background-color 0.5s;
     position: relative;
+    outline: none;
   }
 
-  a:hover {
+  a:hover, a:focus {
     letter-spacing: 0.1rem;
     background-color: var(--orange);
+
   }
 
   #favourite_counter {
@@ -77,15 +79,12 @@ nav {
 #root {
   min-height: 100vh;
 }
-
-#home {
-  .hero_text {
-    margin-block: 2rem;
-    font-size: 5rem;
-    text-align: center;
-    padding-block: 2rem;
-    background-color: var(--dark-green);
-  }
+.hero_text {
+  margin-block: 2rem;
+  font-size: 5rem;
+  text-align: center;
+  padding-block: 2rem;
+  background-color: var(--dark-green);
 }
 
 .card_list_container {
@@ -99,7 +98,7 @@ nav {
 
 .preview_card {
   background-color: var(--orange);
-  width: 20rem;
+  width: 25rem;
   height: max-content;
   border-radius: 1rem;
   position: relative;
@@ -129,7 +128,6 @@ nav {
       }
     img {
       max-width: 100%;
-      height: 20rem;
       object-fit: cover;
     }
   }
@@ -177,6 +175,9 @@ nav {
       li {
         display: flex;
         justify-content: space-between;
+        p:nth-of-type(odd) {
+          color: var(--dark-green);
+        }
       }
     }
   }
@@ -258,8 +259,53 @@ nav {
       }
     }
   }
+  .details_section {
+    display: flex;
+    color: var(--dark-green);
+    justify-content: space-between;
+    padding: 1rem;
+    font-size: 1.5rem;
+    border-top: 1px solid var(--orange);
+    border-bottom: 1px solid var(--orange);
+    margin-block: 1rem;
+    font-weight: bold;
+  }
   .food_instruction {
     background-color: var(--dark-green);
     margin-inline: 3rem;
+    padding: 1rem;
+    padding-top: 0;
+    h1 {
+      text-align: center;
+      border-bottom: 1px solid var(--orange);
+      padding-block: 1rem;
+    }
+    p {
+      padding: 2rem;
+    }
+  }
+}
+
+.text-center {
+  text-align: center;
+}
+
+.category_card {
+  border-radius: 1rem;
+  text-align: center;
+  background: radial-gradient(#636b64, #263A29);
+  box-shadow: 0 0 1rem inset black;
+  transition: box-shadow 0.5s;
+  cursor: pointer;
+  outline: none;
+  img {
+    border-radius: 1rem 1rem 0 0;
+    transition: transform 0.2s;
+  }
+  &:hover,&:focus {
+    box-shadow: 0 0 1rem inset white;
+    img {
+      transform: scale(1.1);
+    }
   }
 }
