--- a/src/index.scss
+++ b/src/index.scss
@@ -210,18 +210,24 @@ nav {
 }
 
 .category_selector {
-  position: absolute;
-  top: 5rem;
-  left: 5rem;
-
   display: grid;
-  grid-template-columns: 0.5fr 1fr;
-  gap: 1rem;
-
+  grid-template-columns: repeat(3, 1fr);
+  padding: 3rem;
+  margin: 2rem;
+  background: var(--dark-green);
+  gap: 3rem;
+  .display-flex {
+    gap: 0.5rem;
+  }
   select {
     padding: 0.25rem 0.5rem;
+    flex: 1 1 auto;
   }
+}
 
+.popup_text {
+  background-color: var(--light-green);
+  padding: 1rem;
 }
 
 #product_page {
@@ -288,6 +294,10 @@ nav {
 
 .text-center {
   text-align: center;
+}
+
+.display-flex {
+  display: flex;
 }
 
 .category_card {
