--- a/src/index.scss
+++ b/src/index.scss
@@ -2,15 +2,16 @@
 
 :root {
   --orange: #E86A33;
-  --dark-green: #263A29;
+  --dark-green: #76ac7e;
   --light-green: #41644A;
   --cream: #F2E3DB;
   --white: white;
   --red: #FF2400;
+  --black: rgb(56, 52, 52);
 
   color-scheme: light dark;
   color: var(--white);
-  background-color: var(--cream);
+  background-color: var(--black);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -56,7 +57,8 @@ nav {
     outline: none;
   }
 
-  a:hover, a:focus {
+  a:hover,
+  a:focus {
     letter-spacing: 0.1rem;
     background-color: var(--orange);
 
@@ -79,11 +81,12 @@ nav {
 #root {
   min-height: 100vh;
 }
+
 .hero_text {
   margin-block: 2rem;
-  font-size: 5rem;
+  font-size: 3rem;
   text-align: center;
-  padding-block: 2rem;
+  padding-block: 1rem;
   background-color: var(--dark-green);
 }
 
@@ -98,100 +101,100 @@ nav {
 
 .preview_card {
   background-color: var(--dark-green);
-  width: 25rem;
-  height: max-content;
-  border-radius: 1rem;
+  width: 50rem;
+  height: 20rem;
   position: relative;
-  .open_full_link {
-    transition: filter 0.5s;
-    position:relative;
-    display: block;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    &:after {
-      content: '';
-      position: absolute;
-      left: 0; right: 0;
-      top: 0;
-      height: 100%;
-      background: url(./assets/read-svgrepo-com.svg) no-repeat center;
-      background-size: 50%;
-      filter: opacity(0);
-      transition: filter 0.5s;
-    }
-    &:hover {
-      filter: grayscale(0.5);
-      &:after {
-        filter: opacity(1);
-      }
-      }
-    img {
-      max-width: 100%;
-      object-fit: cover;
-    }
+  display: flex;
+  border-radius: 1rem;
+  overflow: hidden;
+  box-shadow: 0 0 1rem var(--black);
+  img {
+    height: 20rem;
+    width: 20rem;
+    aspect-ratio: 1;
+    object-fit: cover;
   }
-
-  h3 {
-    text-align: center;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    border-bottom: 1px solid var(--dark-green);
-  }
-
   .food_info {
-    padding-inline: 1rem;
-
-    .grid_collapse {
-      display: grid;
-      grid-template-rows: 0fr;
-      transition: grid-template-rows 0.5s;
-      &.open {
-        grid-template-rows: 1fr;
-        ul:after {
-          filter: opacity(0);
-        }
-      }
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex: 1 1 auto;
+    h3 {
+      max-height: 4rem;
+      overflow: hidden;
+      padding: 0.5rem 1rem;
     }
-
+    ::-webkit-scrollbar {
+      appearance: none;
+    }
     ul {
       list-style: none;
       display: flex;
       flex-direction: column;
-      overflow: hidden;
+      overflow: auto;
       position: relative;
-      &:after {
-        content: '';
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        height: 2rem;
-        background: linear-gradient(transparent, var(--orange));
-        transition: filter 0.5s
-      }
-
+      padding-inline: 1rem;
       li {
         display: flex;
         justify-content: space-between;
+  
         p:nth-of-type(odd) {
           color: var(--cream);
         }
       }
     }
   }
+}
 
+#home {
+  .card_list_container {
+    display: block;
+    height: 30rem;
+    position: relative;
+    overflow: hidden;
+    .preview_card {
+      position: absolute;
+      transition-timing-function: cubic-bezier(0.37, 0, 0.63, 1);
+      transition: left 0.5s, transform 0.5s, filter 0.5s, color 0.5s;
+    }
+    .preview_card[data-state="pastactive"] {
+      left: -100%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+    .preview_card[data-state="delete"] {
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%) scale(0);
+      background-color: var(--red);
+      filter: blur(2rem);
+    }
+    .preview_card[data-state="active"] {
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+    .preview_card[data-state="inactive"] {
+      left: 100%;
+      top: 50%;
+      transform: translate(0, -50%);
+    }
+    
+  }
   .food_buttons {
-    display: grid;
-    grid-template-columns: 0.25fr 1fr 0.25fr;
-
+    display: flex;
+    justify-content: center;
+    padding-block: 2rem;
+    gap: 3rem;
     button {
-      font-size: 1rem;
-      border: none;
       cursor: pointer;
       transition: color 0.2s, background-color 0.2s;
-
+      font-size: 1.5rem;
+      width: 3rem;
+      height: 3rem;
+      border-radius: 50%;
+      border: none;
+      // background-color: transparent;
       &.full_list {
         &:hover {
           background-color: grey;
@@ -220,9 +223,11 @@ nav {
   margin: 2rem;
   background: var(--dark-green);
   gap: 3rem;
+
   .display-flex {
     gap: 0.5rem;
   }
+
   select {
     padding: 0.25rem 0.5rem;
     flex: 1 1 auto;
@@ -242,6 +247,7 @@ nav {
     font-size: 3rem;
     background-color: var(--orange);
   }
+
   .top_section {
     display: flex;
     justify-content: space-evenly;
@@ -250,25 +256,30 @@ nav {
     padding-inline: 5rem;
     color: var(--dark-green);
     margin-block: 2rem;
+
     img {
       height: 30rem;
       width: 30rem;
       place-self: center;
       object-fit: cover;
     }
+
     ul {
       li {
         display: flex;
         justify-content: space-between;
       }
+
       li:nth-of-type(odd) {
         border-bottom: 1px solid var(--dark-green)
       }
+
       li:nth-of-type(even) {
         border-bottom: 1px solid var(--orange)
       }
     }
   }
+
   .details_section {
     display: flex;
     color: var(--dark-green);
@@ -280,16 +291,19 @@ nav {
     margin-block: 1rem;
     font-weight: bold;
   }
+
   .food_instruction {
     background-color: var(--dark-green);
     margin-inline: 3rem;
     padding: 1rem;
     padding-top: 0;
+
     h1 {
       text-align: center;
       border-bottom: 1px solid var(--orange);
       padding-block: 1rem;
     }
+
     p {
       padding: 2rem;
     }
@@ -312,12 +326,16 @@ nav {
   transition: box-shadow 0.5s;
   cursor: pointer;
   outline: none;
+
   img {
     border-radius: 1rem 1rem 0 0;
     transition: transform 0.2s;
   }
-  &:hover,&:focus {
+
+  &:hover,
+  &:focus {
     box-shadow: 0 0 1rem inset white;
+
     img {
       transform: scale(1.1);
     }
