--- a/src/index.scss
+++ b/src/index.scss
@@ -2,8 +2,8 @@
 
 :root {
   --orange: #E86A33;
-  --dark-green: #76ac7e;
-  --light-green: #41644A;
+  --light-green: #6f7f72;
+  --green: #41644A;
   --cream: #F2E3DB;
   --white: white;
   --red: #FF2400;
@@ -46,7 +46,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding-inline: 3rem;
-  background-color: var(--light-green);
+  background-color: var(--green);
   color: var(--cream);
 
   a {
@@ -87,12 +87,12 @@ nav {
   font-size: 3rem;
   text-align: center;
   padding-block: 1rem;
-  background-color: var(--dark-green);
+  background-color: var(--light-green);
 }
 
 .card_list_container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 23rem);
+  grid-template-columns: repeat(auto-fill, 40rem);
 
   gap: 2rem;
   justify-content: space-evenly;
@@ -100,7 +100,7 @@ nav {
 }
 
 .preview_card {
-  background-color: var(--dark-green);
+  background-color: var(--light-green);
   width: 50rem;
   height: 20rem;
   position: relative;
@@ -108,6 +108,26 @@ nav {
   border-radius: 1rem;
   overflow: hidden;
   box-shadow: 0 0 1rem var(--black);
+  transition: left 0.5s, transform 0.5s, filter 0.5s, background-color 0.5s, box-shadow 0.5s;
+  &:hover {
+    box-shadow: 0 0 0.5rem 0.01rem var(--white);
+  }
+  .image_container {
+    cursor: pointer;
+    &:after {
+      content: '';
+      position: absolute;
+      left: 0; top: 0; bottom: 0; right: 30rem;
+      background: url(./assets/read-svgrepo-com.svg) center no-repeat,
+                  rgba(255, 255, 255, 0.2);
+      background-size: 10rem;
+      transition: filter 0.5s;
+      filter: opacity(0);
+    }
+    &:hover:after {
+      filter: opacity(1);
+    }
+  }
   img {
     height: 20rem;
     width: 20rem;
@@ -133,11 +153,14 @@ nav {
       flex-direction: column;
       overflow: auto;
       position: relative;
-      padding-inline: 1rem;
       li {
         display: flex;
         justify-content: space-between;
-  
+        padding: 0.25rem 1.5rem;
+        transition: background-color 0.5s, padding 0.5s;
+        &:hover {
+          background-color: var(--orange);
+        }
         p:nth-of-type(odd) {
           color: var(--cream);
         }
@@ -145,6 +168,7 @@ nav {
     }
   }
 }
+
 
 #home {
   .card_list_container {
@@ -155,7 +179,6 @@ nav {
     .preview_card {
       position: absolute;
       transition-timing-function: cubic-bezier(0.37, 0, 0.63, 1);
-      transition: left 0.5s, transform 0.5s, filter 0.5s, color 0.5s;
     }
     .preview_card[data-state="pastactive"] {
       left: -100%;
@@ -221,7 +244,7 @@ nav {
   grid-template-columns: repeat(3, 1fr);
   padding: 3rem;
   margin: 2rem;
-  background: var(--dark-green);
+  background: var(--light-green);
   gap: 3rem;
 
   .display-flex {
@@ -235,7 +258,7 @@ nav {
 }
 
 .popup_text {
-  background-color: var(--light-green);
+  background-color: var(--green);
   padding: 1rem;
 }
 
@@ -254,7 +277,7 @@ nav {
     align-items: center;
     margin-top: 3rem;
     padding-inline: 5rem;
-    color: var(--dark-green);
+    color: var(--light-green);
     margin-block: 2rem;
 
     img {
@@ -271,7 +294,7 @@ nav {
       }
 
       li:nth-of-type(odd) {
-        border-bottom: 1px solid var(--dark-green)
+        border-bottom: 1px solid var(--light-green)
       }
 
       li:nth-of-type(even) {
@@ -282,7 +305,7 @@ nav {
 
   .details_section {
     display: flex;
-    color: var(--dark-green);
+    color: var(--light-green);
     justify-content: space-between;
     padding: 1rem 5rem;
     font-size: 1.5rem;
@@ -293,7 +316,7 @@ nav {
   }
 
   .food_instruction {
-    background-color: var(--dark-green);
+    background-color: var(--light-green);
     margin-inline: 3rem;
     padding: 1rem;
     padding-top: 0;
