--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --orange: #E86A33;
   --light-green: #6f7f72;
   --green: #41644A;
+  --very-green: rgb(0, 255, 0);
   --cream: #F2E3DB;
   --white: white;
   --red: #FF2400;
@@ -137,15 +138,22 @@ nav #favourite_counter {
   flex: 1 1 auto;
 }
 .preview_card .food_info h3 {
-  max-height: 4rem;
+  max-height: 4.25rem;
   overflow: hidden;
   padding: 0.5rem 1rem;
 }
 .preview_card .food_info ::-webkit-scrollbar {
-  -webkit-appearance: none;
-          appearance: none;
+  background-color: transparent;
+  width: 1rem;
+}
+.preview_card .food_info ::-webkit-scrollbar-thumb {
+  background-color: #E86A33;
+  box-shadow: inset 0 0 0.5rem var(--black);
+  border-radius: 2rem;
 }
 .preview_card .food_info ul {
+  height: 100%;
+  box-shadow: inset 0 0 1rem var(--black);
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -179,6 +187,13 @@ nav #favourite_counter {
   left: -100%;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+#home .card_list_container .preview_card[data-state=loved] {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  background-color: var(--very-green);
+  filter: blur(2rem);
 }
 #home .card_list_container .preview_card[data-state=delete] {
   left: 50%;
