--- a/src/index.scss
+++ b/src/index.scss
@@ -271,6 +271,12 @@ nav {
   }
 }
 
+#categories_page {
+  .card_list_container {
+    grid-template-columns: repeat(auto-fill, 20rem);
+  }
+}
+
 .logo {
   font-size: 3rem;
 }
@@ -295,7 +301,8 @@ nav {
 
 .popup_text {
   background-color: var(--green);
-  padding: 1rem;
+  padding: 1rem 2rem;
+  border-radius: 1rem;
 }
 
 #product_page {
