--- a/src/index.css
+++ b/src/index.css
@@ -269,8 +269,9 @@ nav #favourite_counter {
   grid-template-columns: repeat(3, 1fr);
   padding: 3rem;
   margin: 2rem;
-  background: var(--light-green);
+  background-color: var(--light-green);
   gap: 3rem;
+  border-radius: 1rem;
 }
 .category_selector .display-flex {
   gap: 0.5rem;
@@ -278,12 +279,14 @@ nav #favourite_counter {
 .category_selector select {
   padding: 0.25rem 0.5rem;
   flex: 1 1 auto;
+  cursor: pointer;
 }
 
 .popup_text {
   background-color: var(--green);
   padding: 1rem 2rem;
   border-radius: 1rem;
+  margin-inline: 2rem;
 }
 
 #product_page .food_name {
