--- a/src/index.scss
+++ b/src/index.scss
@@ -253,6 +253,10 @@ nav {
   }
 }
 
+main {
+  padding-bottom: 2rem;
+}
+
 .delete_btn_container {
   button {
     float: right;
@@ -324,7 +328,6 @@ nav {
     align-items: center;
     margin-top: 3rem;
     padding-inline: 5rem;
-    color: var(--light-green);
     margin-block: 2rem;
 
     img {
@@ -334,28 +337,35 @@ nav {
       object-fit: cover;
     }
 
-    ul {
-      li {
-        display: flex;
-        justify-content: space-between;
+    .grid_container {
+      border: 1px solid var(--orange);
+      padding: 2rem 1rem;
+      min-width: 25rem;
+      h2 {
+        margin-bottom: 1rem;
       }
-
-      li:nth-of-type(odd) {
-        border-bottom: 1px solid var(--light-green)
-      }
-
-      li:nth-of-type(even) {
-        border-bottom: 1px solid var(--orange)
+      ul {
+        li {
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 0.5rem;
+        }
+  
+        li:nth-of-type(odd) {
+          border-bottom: 1px solid var(--light-green)
+        }
+  
+        li:nth-of-type(even) {
+          border-bottom: 1px solid var(--orange)
+        }
       }
     }
   }
 
   .details_section {
     display: flex;
-    color: var(--light-green);
     justify-content: space-between;
-    padding: 1rem 5rem;
-    font-size: 1.5rem;
+    padding: 0.5rem 5rem;
     border-top: 1px solid var(--orange);
     border-bottom: 1px solid var(--orange);
     margin-block: 1rem;
@@ -378,6 +388,15 @@ nav {
       padding: 2rem;
     }
   }
+}
+
+.favourite-btn {
+  float: right;
+  font-size: 3rem;
+  border: none;
+  background-color: transparent;
+  color: var(--cream);
+  cursor: pointer;
 }
 
 .text-center {
