--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,7 @@
 
   color-scheme: light dark;
   color: var(--white);
-  background-color: var(--black);
+  background-image: linear-gradient(rgb(39, 39, 39), rgb(59, 70, 62));
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -79,6 +79,10 @@ nav {
   }
 }
 
+#menu_button {
+  display: none;
+}
+
 #root {
   min-height: 100vh;
 }
@@ -110,7 +114,7 @@ nav {
   overflow: hidden;
   box-shadow: 0 0 1rem var(--black);
   transition: left 0.5s, transform 0.5s, filter 0.5s, background-color 0.5s, box-shadow 0.5s;
-  &:hover {
+  &:hover, &:focus-within {
     box-shadow: 0 0 0.5rem 0.01rem var(--white);
   }
   .image_container {
@@ -125,7 +129,7 @@ nav {
       transition: filter 0.5s;
       filter: opacity(0);
     }
-    &:hover:after {
+    &:hover:after, &:focus:after {
       filter: opacity(1);
     }
   }
@@ -427,6 +431,48 @@ main {
 
     img {
       transform: scale(1.1);
+    }
+  }
+}
+
+@media (max-width: 1100px) {
+  nav {
+    padding-inline: 1rem;
+  }
+}
+
+@media (max-width: 950px) {
+  .navigation {
+    z-index: 9;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position: fixed;
+    right: 0; top: 0; bottom: 0;
+    backdrop-filter: blur(5px);
+    transform: translate(100%);
+    transition: transform 0.5s;
+    a {
+      width: 20rem;
+      #favourite_counter {
+        top: 50%;
+        left: 12rem;
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
+  #menu_button {
+    display: block;
+    font-size: 2rem;
+    padding: 0.5rem;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    transition: color 0.5s;
+    z-index: 10;
+    color: var(--white);
+    &:hover {
+      color: var(--orange)
     }
   }
 }
